package projeto.conexao;

public interface FabricaConexao {

}
