package projeto.conexao;

public class FabricaConexaoSQLite {

}
