package projeto.estrutura;

public class Coluna {

}
