package projeto.estrutura;

public class ColunaDecimal {

}
