package projeto.estrutura;

public class ColunaInt {

}
