package projeto.estrutura;

public class ColunaVarchar {

}
