package projeto.estrutura;

public class ObjetoRelacional {
	// ATRIBUTOS
	private String nome;
	
	
	// CONSTRUTOR
	public ObjetoRelacional(String nome) {
		this.nome = nome;
	}

	
	// GETTERS AND SETTERS
	public String getNome() {
		return nome;
	}

	public void setNome(String nome) {
		this.nome = nome;
	}
}
