package projeto.gerenciador;

public class GerenciadorScripts {

}
