package projeto.gerenciador;

public enum TipoDDL {
	CREATE,
	ALTER,
	DROP
}
